[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/art/person/happy.png" type="Texture" id=1]
[ext_resource path="res://src/Player.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 33.3206

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, -1.25992 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 1 )
animation = "up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="AlcoholTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="CDSTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="timeout" from="AlcoholTimer" to="." method="_on_AlcoholTimer_timeout"]
[connection signal="timeout" from="CDSTimer" to="." method="_on_CDSTimer_timeout"]
